# hwloc

config/: hwloc.m4  netloc.m4
doc/: hwloc.doxy
hwloc/: cpukinds.c  hwloc.xsd  topology-linux.c
include/: hwloc.h
include/hwloc/: cpukinds.h
netloc/: Makefile.am  libxml.c
utils/lstopo/: lstopo-tikz.c
utils/netloc/export/SimGrid/: Makefile.am  netloc_topo_to_simgrid.c
utils/netloc/export/draw/: netloc_json_expand.sh
utils/netloc/hardware/explicit/: netloc_explicit_find_hosts.c
